# vibeide_Neil

./: .gitignore  CLAUDE.md  README.md  build-portable.cmd  pyproject.toml
agent/: CLAUDE.md  package-lock.json  package.json
agent/skills/: espidf_hardboard.md
agent/tools/: bilibili_search.mjs  cdp_navigate.mjs
config/: version.json
docs/: AGENT_CHAT_PRESENTATION_CONSTRUCTION.md  AGENT_CONVERSATION_HISTORY_CONSTRUCTION.md  AGENT_SKILL_RUNTIME_CONSTRUCTION.md  AGENT_TASK_QUEUE_CONSTRUCTION.md  ARCHITECTURE.md  DEVELOPMENT.md  DEV_PROGRESS.md  ELECTRON_APPLE_UI_CONSTRUCTION.md  GITHUB_SYNC.md  HANDOFF.md  HARDBOARD_CONSTRUCTION.md  INDEX.md  LOG.md  PLAN_2026-06-21_CLAUDE_SESSION_NES_UI.md  REFACTOR_PLAN.md  RUNTIME_EVENTBUS_CONSTRUCTION.md  RUNTIME_TASK_MANAGER_UI_CONSTRUCTION.md  SECURITY.md  SOFTWARE_ASSISTANT_GUIDE_CONSTRUCTION.md  SPLASH_SCREEN_CONSTRUCTION.md  WINDOWS_0_1_MIGRATION_CONSTRUCTION.md  WINDOWS_0_4_0_7161_TEST_REPORT.md  WINDOWS_V1_0_0_RELEASE_CHECKLIST.md
electron/: CATNIP_FORGE_USER_GUIDE.md  DISTRIBUTION_README.txt  apikey.txt.example  bili_run.ts  electron-builder.yml  package-lock.json  package.json
electron/assets/: splash.html
runtime/: package-lock.json  package.json
runtime/hardboard/example/esp32s3/openlive2d_atri/main/: CMakeLists.txt  idf_component.yml  main.c
runtime/hardboard/example/esp32s3/openlive2d_atri/main/assets/: room_window_240x320.rgb565  texture_00.a8  texture_00.rgb565
runtime/src/: browser.ts  (+4 more)
scripts/: docker_windows_smoke.sh  start_electron_desktop.cmd  start_electron_desktop.ps1  start_electron_desktop.sh
(+79 files in other folders)
